[package]
name = "storage"
version = "1.8.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytes = "1.0.1"
derive_builder = "0.9"
thiserror = "1.0"
getset = "0.1"
hex = "0.4"
itertools = "0.10"
num_cpus = "1.13"
rocksdb = {version = "0.17", features = ["snappy", "lz4", "zstd", "zlib"], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
sled = "0.34.6"
strum = "0.20"
strum_macros = "0.20"
zstd = "0.5.3+zstd.1.4.5"
# local dependencies
crypto = { path = "../crypto" }
tezos_api = { path = "../tezos/api" }
tezos_messages = { path = "../tezos/messages" }

# Context actions replayer binary and his dependencies
clap = "2.33"
slog-term = "2.8"
slog-async = "2.6"

[[bench]]
name = "predecessor_benchmarks"
harness = false

[dev-dependencies]
hex = "0.4"
lazy_static = "1.4"
rand = "0.7.3"
criterion = "0.3"
fs_extra = "1.2.0"
# TODO - TE-498 - remove dependency to OLD commit log
commitlog = "0.1"

[features]
maindb-backend-rocksdb = []
maindb-backend-sled = []