[package]
name = "storage_structure"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
typename = "0.1.1"
storage = { path = "../storage" }