[package]
name = "tezedge-proposer"
version = "1.8.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.3"
failure = "0.1"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
mio = { version = "0.7.11", features = ["os-poll", "net"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# local dependencies
tla-sm = { path = "../tla_sm" }
tezedge-state = { path = "../tezedge_state" }
crypto = { path = "../crypto" }
tezos_messages = { path = "../tezos/messages" }

[features]
blocking = []
