[package]
name = "tezedge-state"
version = "1.8.0"
authors = ["Zura Benashvili <zura.benashvili@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
bytes = "1"
slab = "0.4.3"
rand = "0.7.3"
failure = "0.1"
hex = "0.4"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.6"
slog-term = "2.6"
mio = { version = "0.7.11", features = ["os-poll", "net"] }
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# local dependencies
tla-sm = { path = "../tla_sm" }
crypto = { path = "../crypto" }
storage = { path = "../storage" }
tezos_encoding = { path = "../tezos/encoding" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
quickcheck = "1.0.3"
quickcheck_derive = "0.3.0"
itertools = "0.10.0"

[features]
blocking = []
