[package]
name = "tezos_client"
version = "0.1.0"
authors = ["Branislav Kontur <branislav.kontur@simplestaking.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
futures-preview = "0.3.0-alpha.19"
hex = "0.4.0"
log = "0.4.8"

# local dependencies
networking = { path = "../networking" }
tezos_encoding = { path = "../tezos_encoding" }
tezos_interop = { path = "../tezos_interop" }