[package]
name = "tezos_interop"
version = "0.1.3"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
futures-preview = "0.3.0-alpha.18"
lazy_static = "1.3.0"
log = "0.4.8"
ocaml = "0.7.0"

[build-dependencies]
fs_extra = "1.1.0"