[package]
name = "baker"
version = "3.2.0"
edition = "2021"

[[bin]]
name = "tezedge-baker"
path = "src/bin/baker.rs"

[dev-dependencies]
once_cell = { version = "1.10.0" }
serial_test = { version = "0.7.0" }

[dependencies]
structopt = { version = "0.3.25" }
reqwest = { version = "0.11.8", features = ["blocking", "stream"] }
url = { version = "2.2.2" }
log = { version = "0.4.17" }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.7" }
slog-term = { version = "2.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
derive_more = { version = "0.99.17" }
thiserror = { version = "1.0" }
hex = { version = "0.4.3" }
time = { version = "0.3.9" }
nom = "6.1"
lazy_static = "1.4"
env_logger = { version = "0.9.0" }
rand = { version = "0.8.5" }
signal-hook = { version = "0.3.13" }

# fs_extra = { version = "1.2" }

fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }
fuzzcheck_mutators_derive = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

redux-rs = { git = "https://github.com/tezedge/redux-rs.git", rev = "56e116d", features = ["serde"] }
crypto = { path = "../../crypto" }
tezos_messages = { path = "../../tezos/messages" }
tezos_encoding = { path = "../../tezos/encoding" }
tezos_encoding_derive = { path = "../../tezos/encoding-derive" }
tenderbake = { path = "../tenderbake" }

[features]
fuzzing = [
    "fuzzcheck",
    "fuzzcheck_mutators_derive",
    "redux-rs/fuzzing",
    "crypto/fuzzing",
    "tezos_encoding/fuzzing",
    "tezos_messages/fuzzing",
    "tenderbake/fuzzing",
]
# default = ["fuzzing"]
