[package]
name = "node-monitoring"
version = "1.17.0"
authors = ["Adrian Nagy <adrian.nagy@viablesystems.io>"]
edition = "2021"
default-run = "node-monitoring"

[dependencies]
cfg-if = "1.0"
clap = "2.33"
chrono = "0.4"
thiserror = "1"
fs2 = "0.4"
fs_extra = "1.2"
itertools = "0.10"
getset = "0.1"
merge = "0.1"
http = "0.2.2"
percentage = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values", "max_level_trace", "release_max_level_trace"] }
slog-async = "2.6"
slog-term = "2.8"
sysinfo = { git = "https://github.com/tezedge/sysinfo.git", tag = "tezedge-v0.19.2-1" }
tokio = { version = "1.12", features = ["full"] }
wait-timeout = "0.2"
warp = "0.3"
procfs = "0.9"
netinfo = { git = "https://github.com/tezedge/netinfo.git", tag = "tezedge-v0.5.1-1" }

[workspace]